[tool.poetry]
name = "oh-python-template"
version = "0.1.0"
description = "Template for python ML project"
authors = ["rskrzydelski <r.skrzydelski@gmail.com>"]
readme = "README.md"
packages = [{include = "oh_python_template"}]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
pandas = "^2.0.0"
jupyterlab = "^3.6.3"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
mypy = "^1.2.0"
pytest = "^7.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
